--- a/entry-4/index.html
+++ b/entry-4/index.html
@@ -91,7 +91,7 @@
      <h1>Song that are good to listen to while working out</h1>
      
      <div class="toc">
-      <a href="../entry-2/index.html">Go to ToC</a>
+      <a href="../index.html">Go to ToC</a>
      </div>
      <div>
       Are you looking for different music than what's here?<br>
