--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -60,7 +60,7 @@
    <body>
      <h1><strong>How to relieve stress effectively</strong></h1>
      <div class="toc">
-      <a href="../entry-2/index.html">Go to ToC</a>
+      <a href="../index.html">Go to ToC</a>
      </div>
      <h2>&lt;MEDITATING&gt;</h2>
      <div>
