--- a/entry-6/index.html
+++ b/entry-6/index.html
@@ -25,7 +25,7 @@
    <body>
     <h1>The museums in Manhattan</h1>
     <div class="toc">
-      <a href="../entry-2/index.html">Go to ToC</a>
+      <a href="../index.html">Go to ToC</a>
      </div>
     <div class="slide_wrapper">
         <ul class="slides">
