--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
      </style>
    </head>
    <body>
-     <h1>Ways to Improve Quality of My Life</h1>
+     <h1>Ways to Improve Quality of Life</h1>
 
      <div class="toc">
-      <a href="welcome.html">BACK</a>
+      <a href="entry-1/index.html">BACK</a>
      </div>
 
      <div>
@@ -98,7 +98,7 @@
       <a href="entry-7/index.html"><img src="assets/Entry7-icon.png"></a>
      </div>
      <div>
-      <a><img src="assets/Empty-Entry.png"></a>
+      <a href="entry-8/index.html"><img src="assets/Entry8-icon.png"></a>
      </div>
    </body>
  </html>
