--- a/entry-1/index.html
+++ b/entry-1/index.html
@@ -7,7 +7,7 @@
      <style>
         *{margin:0; padding:0;}
         body {
-            color: rgb(106, 67, 34);
+            color: brown;
             background-image: url(../assets/entry-1/background-img.png);
         }
         h1 {
@@ -17,20 +17,13 @@
         .toc {
             bottom: 10px;
             right: 10px;
-            border-color: rgb(106, 67, 34);
+            border-color: brown;
             background-color: burlywood;
         }
         .collapsible {
-            cursor: pointer;
-            padding: 10px;
-            border-style: solid;
-            border-width: 4px;
-            position: fixed;
-            font-size: 30px;
-            z-index: 1;
-            border-color: rgb(106, 67, 34);
+            border-color: brown;
             background-color: burlywood; 
-            color: rgb(106, 67, 34);
+            color: brown;
         }
         .collapsible#ingredients-button {
             bottom: 150px;
@@ -41,12 +34,8 @@
             right: 10px;
         }
         .content {
-            position: absolute;
-            font-family: sans-serif;
             border: brown 5px double;
             background-color: burlywood;
-            z-index: 1;
-            display: none;
         }
         .content#ingredients {
             bottom: 220px;
@@ -124,7 +113,7 @@
             }
           });
         }
-        </script>
+    </script>
 
    </body>
  </html>
