--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         position: absolute;
         bottom: 150px;
         right: 80px;
+      }div:nth-child(11) {
+        position: absolute;
+        bottom: 100px;
+        left: 670px;
       }
      </style>
    </head>
@@ -99,6 +103,9 @@
      </div>
      <div>
       <a href="entry-8/index.html"><img src="assets/Entry8-icon.png"></a>
+     </div>
+     <div>
+      <a href="entry-9/index.html"><img src="assets/Entry9-icon.png"></a>
      </div>
    </body>
  </html>
