--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       div:nth-child(3) {
         position: absolute;
         top: 100px;
-        left: 420px;
+        left: 450px;
       }
       div:nth-child(4) {
         position: absolute;
@@ -44,8 +44,8 @@
       }
       div:nth-child(6) {
         position: absolute;
-        top: 350px;
-        left: 480px;
+        top: 400px;
+        left: 430px;
       }
       div:nth-child(7) {
         position: absolute;
@@ -66,10 +66,16 @@
         position: absolute;
         bottom: 150px;
         right: 80px;
-      }div:nth-child(11) {
+      }
+      div:nth-child(11) {
         position: absolute;
         bottom: 100px;
         left: 670px;
+      }
+      div:nth-child(12) {
+        position: absolute;
+        top: 300px;
+        left: 750px;
       }
      </style>
    </head>
@@ -106,6 +112,9 @@
      </div>
      <div>
       <a href="entry-9/index.html"><img src="assets/Entry9-icon.png"></a>
+     </div>
+     <div>
+      <a href="entry-10/index.html"><img src="assets/Entry10-icon.png"></a>
      </div>
    </body>
  </html>
