--- a/entry-5/index.html
+++ b/entry-5/index.html
@@ -9,6 +9,12 @@
         color: orange;
         background-image: url(../assets/healthy-food-background.png);
       }
+      .toc {
+          bottom: 10px;
+          right: 10px;
+          border-color: rgb(73, 149, 81);
+          background-color: rgb(156, 239, 167);
+       }
       h1 {
         border-style: none;
         padding: 0;
@@ -122,5 +128,9 @@
       <br>
       In a balanced diet, protein is crucial for muscle development, tissue repair, and maintaining a healthy immune system. It also aids in providing energy and satiety.
      </div>
+    
+     <div class="toc">
+      <a href="../index.html">Go to ToC</a>
+    </div>
    </body>
  </html>
