Final Final done

--- a/index.html
+++ b/index.html
@@ -12,67 +12,65 @@
         color: purple;
       }
       h1 {
-        font-size: 60px;
+        font-size: 4vw;
         border: none;
       }
       div {
-        max-height: 200px;
-        max-width: 200px;
+        max-width: 12vw;
       }
       img {
         width: 100%;
         height: 100%;
       }
-
       div:nth-child(2) {
         position: absolute;
-        top: 100px;
-        left: 450px;
+        top: 13vh;
+        left: 24vw;
       }
       div:nth-child(3) {
         position: absolute;
-        bottom: 90px;
-        left: 150px;
+        top: 16vh;
+        left: 85vw;
       }
       div:nth-child(4) {
         position: absolute;
-        top: 150px;
-        left: 80px;
+        top: 20vh;
+        left: 5vw;
       }
       div:nth-child(5) {
         position: absolute;
-        top: 400px;
-        left: 430px;
+        top: 44vh;
+        left: 27vw;
       }
       div:nth-child(6) {
         position: absolute;
-        top: 220px;
-        right: 380px;
+        top: 18vh;
+        left: 63vw;
       }
       div:nth-child(7) {
         position: absolute;
-        top: 120px;
-        right: 50px;
+         top: 70vh;
+         left: 10vw;
       }
       div:nth-child(8) {
         position: absolute;
-        bottom: 50px;
-        right: 460px;
+        top: 75vh;
+        left: 60vw
       }
       div:nth-child(9) {
         position: absolute;
-        bottom: 150px;
-        right: 80px;
+        top: 60vh;
+        left: 80vw;
       }
       div:nth-child(10) {
         position: absolute;
-        bottom: 100px;
-        left: 670px;
+        top: 75vh;
+        left: 36vw;
       }
       div:nth-child(11) {
         position: absolute;
-        top: 330px;
-        left: 850px;
+        top: 42vh;
+        left: 50vw;
       }
      </style>
    </head>
@@ -83,7 +81,7 @@
       <a href="entry-1/index.html"><img src="assets/entry-icons/Entry1-icon.png"></a>
      </div>
      <div>
-      <a href="entry-6/index.html"><img src="assets/entry-icons/Entry6-icon.png"></a>
+      <a href="entry-2/index.html"><img src="assets/entry-icons/Entry2-icon.png"></a>
      </div>
      <div>
       <a href="entry-3/index.html"><img src="assets/entry-icons/Entry3-icon.png"></a>
@@ -95,7 +93,7 @@
       <a href="entry-5/index.html"><img src="assets/entry-icons/Entry5-icon.png"></a>
      </div>
      <div>
-      <a href="entry-2/index.html"><img src="assets/entry-icons/Entry2-icon.png"></a>
+      <a href="entry-6/index.html"><img src="assets/entry-icons/Entry6-icon.png"></a>
      </div>
      <div>
       <a href="entry-7/index.html"><img src="assets/entry-icons/Entry7-icon.png"></a>
