--- a/entry-3/index.html
+++ b/entry-3/index.html
@@ -34,24 +34,24 @@
       }
       div:nth-child(5) {
         position: absolute;
-        top: 700px;
-        left: 200px;
-        width: 100px;
-        height: 76px;
+        top: 74vh;
+        left: 10vw;
+        width: 6vw;
+        height: 8vh;
       }
       div:nth-child(6) {
         position: absolute;
-        top: 450px;
-        right: 900px;
-        width: 100px;
-        height: 76px;
+        top: 50vh;
+        left: 42vw;
+        width: 6vw;
+        height: 8vh;
       }
       div:nth-child(7) {
         position: absolute;
-        top: 150px;
-        right: 400px;
-        width: 100px;
-        height: 76px;
+        top: 16vh;
+        left: 72vw;
+        width: 6vw;
+        height: 8vh;
       }
       img {
         height: 100%;
